--- a/springboot-mall/src/main/resources/application.properties
+++ b/springboot-mall/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://172.18.0.2:3306/mall?serverTimezone=Asia/Taipei&characterEncoding=utf-8
+#spring.datasource.url=jdbc:mysql://172.18.0.2:3306/mall?serverTimezone=Asia/Taipei&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://172.18.0.2:3306/mall?serverTimezone=Asia/Taipei&characterEncoding=utf-8&useSSL=false&rewriteBatchedStatements=true
 spring.datasource.username=root
 spring.datasource.password=12345678
 spring.jackson.time-zone=GMT+8
