--- a/springboot-mall/docker-compose.yml
+++ b/springboot-mall/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8080:8080"
+      - "${PORT:-8080}:8080"  # 修改為使用 Render 提供的 PORT 變數，默認為 8080
     depends_on:
       - db
     environment:
@@ -15,6 +15,8 @@ services:
       SPRING_DATASOURCE_PASSWORD: 12345678
       SPRING_JACKSON_TIME_ZONE: GMT+8
       SPRING_JACKSON_DATE_FORMAT: yyyy-MM-dd HH:mm:ss
+      SERVER_ADDRESS: 0.0.0.0   # 確保服務綁定到所有網絡接口
+      SERVER_PORT: ${PORT:-8080}  # 使用 Render 提供的 PORT 變數
 
   db:
     image: mysql:8.0.33
@@ -25,7 +27,6 @@ services:
       MYSQL_DATABASE: mall
     volumes:
       - db_data:/var/lib/mysql
-
 
 volumes:
   db_data:
