--- a/springboot-mall/src/main/resources/application.properties
+++ b/springboot-mall/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.username=root
 spring.datasource.password=12345678
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-server.port=${PORT:8080}
+server.address=0.0.0.0
+server.port=${PORT:10000}  # ?????? PORT??????????? 10000
