--- a/springboot-mall/docker-compose.yml
+++ b/springboot-mall/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "${PORT:-8080}:8080"  # 修改為使用 Render 提供的 PORT 變數，默認為 8080
+      - "${PORT:-8080}:8080"
     depends_on:
       - db
     environment:
