--- a/springboot-mall/src/main/resources/application.properties
+++ b/springboot-mall/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.password=12345678
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 server.address=0.0.0.0
-server.port=${PORT:10000}  # ?????? PORT??????????? 10000
+server.port=${PORT:10000}
