--- a/springboot-mall/src/main/resources/application.properties
+++ b/springboot-mall/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://172.18.0.2:3306/mall?serverTimezone=Asia/Taipei&characterEncoding=utf-8
-spring.datasource.url=jdbc:mysql://db:3306/mall?serverTimezone=Asia/Taipei&characterEncoding=utf-8&useSSL=false&rewriteBatchedStatements=true
+spring.datasource.url=jdbc:mysql://dpg-crr80p2j1k6c73eb48t0-a.render.com:3306/mall?serverTimezone=Asia/Taipei&characterEncoding=utf-8&useSSL=false&rewriteBatchedStatements=true
 spring.datasource.username=root
 spring.datasource.password=12345678
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 server.address=0.0.0.0
 server.port=${PORT:10000}
+#spring.datasource.url=jdbc:mysql://172.18.0.2:3306/mall?serverTimezone=Asia/Taipei&characterEncoding=utf-8
