Docker mysql Test

--- a/springboot-mall/docker-compose.yml
+++ b/springboot-mall/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     depends_on:
       - db
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://dpg-crr80p2j1k6c73eb48t0-a:5432/mall?serverTimezone=Asia/Taipei&characterEncoding=utf-8
+      SPRING_DATASOURCE_URL: jdbc:mysql://database-jerry.cleocki8acl5.us-east-1.rds.amazonaws.com:3306/mall?serverTimezone=Asia/Taipei&characterEncoding=utf-8
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: 12345678
       SPRING_JACKSON_TIME_ZONE: GMT+8
