--- a/springboot-mall/src/main/resources/application.properties
+++ b/springboot-mall/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://dpg-crr80p2j1k6c73eb48t0-a.render.com:5432/mall?serverTimezone=Asia/Taipei&characterEncoding=utf-8&useSSL=false&rewriteBatchedStatements=true
+spring.datasource.url=jdbc:mysql://database-jerry.cleocki8acl5.us-east-1.rds.amazonaws.com:3306/mall?serverTimezone=Asia/Taipei&characterEncoding=utf-8&useSSL=false&rewriteBatchedStatements=true
 spring.datasource.username=root
 spring.datasource.password=12345678
 spring.jackson.time-zone=GMT+8
