--- a/springboot-mall/src/main/resources/application.properties
+++ b/springboot-mall/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://database-jerry.cleocki8acl5.us-east-1.rds.amazonaws.com:3306/mall?serverTimezone=Asia/Taipei&characterEncoding=utf-8&useSSL=false&rewriteBatchedStatements=true
-spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.username=jerry
+spring.datasource.password=2QAJGZZsawEfTObnxUK9
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 server.address=0.0.0.0
